<resources>
    <string name="app_name">Semanita</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingresa_a_tu_cuenta">Ingresá a tu cuenta</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="crea_tu_cuenta">Crea tu cuenta</string>
    <string name="registrame">Registrame</string>
    <string name="repetir_contrasena">Repetir contraseña</string>
    <string name="ya_tienes_cuenta">Ya tienes cuenta? Inicia sesión</string>
    <string name="registrarme_ahora">Registrarme ahora</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="semanita">SEMANITA</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripción</string>
    <string name="minutos">Minutos</string>
    <string name="_00">00</string>
    <string name="dia">Dia</string>
    <string name="_00_00">00:00</string>
    <string name="tareas">Tareas</string>
    <string name="tiempo">Tiempo</string>
    <string name="boton">boton</string>
</resources>